# howto_cpp_library

./: CMakeLists.txt  README.md
math_library/: CMakeLists.txt  mathlib.cpp
math_library_client_shared/: CMakeLists.txt  math_client_shared.cpp
math_library_client_static/: CMakeLists.txt  math_client_static.cpp
